--- a/cms/languages/en/email/password_forgot_reset.txt
+++ b/cms/languages/en/email/password_forgot_reset.txt
@@ -12,7 +12,7 @@
     <div style="margin:0;padding:0">
       <table border="0" cellpadding="0" cellspacing="0" width="100%">
       <tbody><tr>
-          <td bgcolor="#D8F1FF" align="center" style="padding:70px 15px 70px 15px" class="m_615698076909036705section-padding">
+          <td bgcolor="#fffcd8" align="center" style="padding:70px 15px 70px 15px" class="m_615698076909036705section-padding">
             <table border="0" cellpadding="0" cellspacing="0" width="500" class="m_615698076909036705responsive-table">
                <tbody><tr>
                 <td>
